fix overflow / update style

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,7 +7,7 @@ header {
   border-bottom: 1px dashed #cbcbcb;
   background: rgba(0, 0, 0, 0.3);
   margin: 0 0 0 0;
-  padding: 20px 2rem 0rem 2rem;
+  padding: 20px 0rem 0rem 0rem;
   width: 100%;
   margin: 0 auto;
 }
